--- a/pratica-07/Makefile
+++ b/pratica-07/Makefile
@@ -4,6 +4,7 @@ CC=gcc
 CFLAGS=-O2 -Wall -ansi -lm -I.
 DEPS = sol_triang.h
 OBJ = sol_triang.o soluc.o
+PROGS = sol_triang
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
@@ -11,22 +12,5 @@ OBJ = sol_triang.o soluc.o
 sol_triang: $(OBJ)
 	gcc -o $@ $^ $(CFLAGS)
 
-
-# Makefile Dovicchi
-
-# CC = gcc
-# CFLAGS = -O2 -ansi -Wall
-# LIBDIR = -L/usr/local/lib
-# LIBS = -lm
-
-# INC = -I./ -I/usr/local/include
-
-# PROGS = fatorial
-
-# all: $(PROGS)
-
-# fatorial: fat.c main.c
-# $(CC) $(CFLAGS) $(INC) $(LIBDIR) -o $@ $? $(LIBS)
-
-# clean:
-# rm -f *~ *.core *.o *.dat $(PROGS)
+clean:
+	rm -f *~ *.core *.o *.dat $(PROGS)
